2008-06-01  Inge Wallin  <inge@lysator.liu.se>

	Fix issue with paintBase
	* src/lib/Projections/EquirectProjectionHelper.cpp (paintBase):
	Bound the top and bottom values of the rectangle.

2008-06-01  Torsten Rahn  <rahn@kde.org> 

    * src/lib/TextureTile.cpp:
    * src/lib/TileLoader.cpp:

    - Taking cache contents into account when creating fallback
      tiles: preparation for threaded loading

2008-06-01  Inge Wallin  <inge@lysator.liu.se>

	Fix some issues with the active area in the image.
	* src/lib/Projections/EquirectProjectionHelper.cpp (setActiveRegion):
	Bound the active area to the viewport.

	* src/lib/Projections/SphericalProjectionHelper.cpp (setActiveRegion):
	Comment the code better and use mapCoversViewport()

2008-05-31  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/kml
    * src/lib/kml/KMLDocumentParser.cpp
    * src/lib/kml/KMLContainerParser.cpp
    * src/lib/kml/KMLFeature.h
    * src/lib/kml/KMLStyle.cpp
    * src/lib/kml/KMLPlaceMark.h
    * src/lib/kml/KMLColorStyle.h
    * src/lib/kml/KMLLabelStyle.h
    * src/lib/kml/KMLObject.cpp
    * src/lib/kml/KMLStyleSelector.h
    * src/lib/kml/KMLPointParser.h
    * src/lib/kml/KMLFeatureParser.h
    * src/lib/kml/KMLStyleParser.cpp
    * src/lib/kml/KMLIconStyle.h
    * src/lib/kml/KMLFolder.h
    * src/lib/kml/KMLPlaceMarkParser.h
    * src/lib/kml/KMLColorStyleParser.h
    * src/lib/kml/KMLLabelStyleParser.h
    * src/lib/kml/KMLDocument.h
    * src/lib/kml/KMLObjectParser.cpp
    * src/lib/kml/KMLContainer.h
    * src/lib/kml/KMLFeature.cpp
    * src/lib/kml/KMLIconStyleParser.h
    * src/lib/kml/KMLColorStyle.cpp
    * src/lib/kml/KMLPlaceMark.cpp
    * src/lib/kml/KMLDocumentParser.h
    * src/lib/kml/KMLLabelStyle.cpp
    * src/lib/kml/KMLStyleSelector.cpp
    * src/lib/kml/KMLContainerParser.h
    * src/lib/kml/KMLStyle.h
    * src/lib/kml/KMLPointParser.cpp
    * src/lib/kml/Serializable.h
    * src/lib/kml/KMLFeatureParser.cpp
    * src/lib/kml/KMLIconStyle.cpp